--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="All information where you can get an unforgettable vacation. Travel with us. Your holiday will be the best.">
+  <meta name="keywords" content="travel, Bhromaon, holiday, weekend, rest">
+  <meta name="author" content="Anastasiia Aslanova">
   <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
@@ -17,7 +20,7 @@
       <div class="header__info">
         <p class="header__info--title">Bhromaon</p>
         <p class="header__info--sub-title">Safe Travel Anywhere</p>
-        <form action=”" method="get">
+        <form action="" method="get">
           <label for="name"></label>
           <input type="text" id="name" name="name" placeholder="Search Your Travel Destination">
           <button type="submit">
