--- a/index.html
+++ b/index.html
@@ -176,18 +176,18 @@
     <div class="section-5__holder">
       <p class="section-5__title">What Our  Tourists Say</p>
       <div class="section-5__cart">
-        <div class="section-5__img">
+        <div class="section-5__img element">
           <picture>
             <source media="(max-width: 767px)" srcset="./images/image-section5-extra-small.jpg"/>
             <source media="(max-width: 1023px)" srcset="./images/image-section5-small.jpg" />
             <source media="(max-width: 1359px)" srcset="./images/image-section5-medium.jpg">
-            <img alt="image" src="./images/image-section5-large.jpg" />
+            <img alt="image" src="images/image-section5-large.jpg" />
           </picture>
         </div>
-        <div class="section-5__details">
+        <div class="section-5__details element">
           <p class="section-5__cart--title">Sam Sumond</p>
           <q class="section-5__cart--text">
-            <svg class="red" width="30" height="30" class="close">
+            <svg width="30" height="30" class="close">
               <use xlink:href="images/symbol-defs.svg#icon-quote-left"></use>
             </svg>
             But I must explain to you how all this mistaken idea
